--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher/issues">Issues</a>
 
           <h1 id="project_title">Game-pax-launcher</h1>
           <h2 id="project_tagline">Game Pax is an open source Java game launcher framework. Follow the instructions in the files and you will have a working launcher for your game.</h2>
