--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher">View on GitHub</a>
-          <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher/issues">Issues</a>
+          <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher">View on Github </a>   
 
           <h1 id="project_title">Game-pax-launcher</h1>
           <h2 id="project_tagline">Game Pax is an open source Java game launcher framework. Follow the instructions in the files and you will have a working launcher for your game.</h2>
@@ -53,6 +52,7 @@
       <footer class="inner">
         <p class="copyright">Game-pax-launcher maintained by <a href="https://github.com/Kivitoe">Kivitoe</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher/issues">Issues</a>
       </footer>
     </div>
 
