--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
 
     <!-- HEADER -->
+    <script>alert ('It is recommended that you look at the github project for more information.'); </script>
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Kivitoe/Game-Pax-Launcher">View on Github </a>   
